fix: responsive menus not showing

--- a/src/layout-components/Container/Container.css
+++ b/src/layout-components/Container/Container.css
@@ -55,5 +55,6 @@
 @media (max-width : 600px) {
     .ui-container.direction-row {
         flex-direction: column;
+        justify-content: flex-start;
     }
 }
